--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
-    "mongoose": "^6.1.2"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.1.2",
+    "nodemon": "^2.0.15"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
+    "@types/jsonwebtoken": "^8.5.6",
     "tsconfig-paths": "^3.12.0"
   }
 }
